aws/projects/001-roman-numerals-converter/project-2-cfn.yml
AWSTemplateFormatVersion: 2010-09-09            
Description: |
  Cloudformation Template  for Roman Numerals Converter Application. 
Parameters:
  VpcId:                        
    Type: AWS::EC2::VPC::Id
    Description: VpcId of your existing Virtual Private Cloud (VPC)
  InstanceType:
    Description: WebServer EC2 instance type
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t1.micro
      - m1.small
      - m1.medium
      - m1.large
    ConstraintDescription: must be a valid EC2 instance type.
  KeyName:
    Description: The EC2 Key Pair to allow SSH access to the instances
    Type: AWS::EC2::KeyPair::KeyName

Mappings:
  RegionImageMap:
    us-east-1:
      AMI: ami-0c94855ba95c71c99
    us-east-2:
      AMI: ami-0603cbe34fd08cb81
    us-west-1:
      AMI: ami-0e65ed16c9bf1abc7
    us-west-2:
      AMI: ami-0841edc20334f9287
    eu-west-1:
      AMI: ami-08a2aed6e0a6f9c7d  

Resources:
  mySecurityGroup:        
    Type: "AWS::EC2::SecurityGroup"   
    Properties:
      GroupDescription: Enables SSH and HTTP 
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22   
          ToPort: 22
          CidrIp: 0.0.0.0/0   
        - IpProtocol: tcp
          FromPort: 80  
          ToPort: 80
          CidrIp: 0.0.0.0/0

  myNewInstance:
    Type: "AWS::EC2::Instance"
    Properties:    
      ImageId: !FindInMap
        - RegionImageMap
        - !Ref AWS::Region
        - AMI
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyName
      SecurityGroupIds:
        - !Ref mySecurityGroup
      Tags:
        - Key: Name
          Value: !Sub Web Server of ${AWS::StackName} Stack
      UserData: !Base64 |
            #! /bin/bash
            yum update -y
            yum install python3 -y
            pip3 install flask
            cd /home/ec2-user
            wget https://raw.githubusercontent.com/mertcetin91/benim_repom/master/aws/projects/001-roman-numerals-converter/app.py
            mkdir templates
            cd templates
            wget https://raw.githubusercontent.com/mertcetin91/benim_repom/master/aws/projects/001-roman-numerals-converter/templates/index.html
            wget https://raw.githubusercontent.com/mertcetin91/benim_repom/master/aws/projects/001-roman-numerals-converter/templates/result.html
            cd ..
            python3 app.py
      
  
  
  
Outputs:                                  
  URL:
    Value: !Sub
      - http://${PublicAddress}
      - PublicAddress: !GetAtt myNewInstance.PublicDnsName
    Description: Roman Numerals Converter Application URL
